# semfast

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/semfast-cli/: Cargo.toml
crates/semfast-cli/src/: main.rs
crates/semfast-cli/tests/: cli_smoke.rs
crates/semfast-core/: Cargo.toml
crates/semfast-core/src/: artifact.rs  benchmark.rs  bm25.rs  chunking.rs  embedding.rs  lib.rs  metadata.rs  query.rs  ranking.rs
crates/semfast-core/src/vector/: exact.rs  mod.rs  turbovec.rs
docs/: comparison-benchmark-plan.md  embedding-models.md  milestone-1-benchmark.md  production-benchmark.md
examples/retrieval-latency-bench/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
examples/retrieval-latency-bench/scripts/: build-benchmark-index.ts  prepare-scifact.ts
examples/retrieval-latency-bench/server/: app.ts  index.ts  smoke.ts
examples/retrieval-latency-bench/src/: main.tsx  styles.css
fixtures/bench/: queries.jsonl
fixtures/docs/: billing.md  support.md
scripts/: setup-production-runtime.sh
